package edu.hitsz.PropFactory;

import edu.hitsz.prop.AbstractProp;
import edu.hitsz.prop.BombSupply;

public class BombFactory implements PropFactory {
    @Override
    public AbstractProp createProp(int x, int y) {
        return new BombSupply(x, y, 0, 3);
    }
}
